[metadata]
name = descoApi
version = 1.0
author = The Doctor
author_email = code.doc113@gmail.com
description = Lets you use the DESCO API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Doctorthe113/Desco-api
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU V3 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src